--- a/MDTManagment/MDTManagment/Views/Dentists/AddDentistPage.xaml
+++ b/MDTManagment/MDTManagment/Views/Dentists/AddDentistPage.xaml
@@ -63,7 +63,7 @@
         <Grid Grid.Column="2" Grid.Row="5">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <Button Content="Add Dentist" Command="{Binding AddDentist}" Height="20" Width="90"/>
-                <Button Content="Back" Command="{Binding NavigateToDentists}" Height="20" Width="90" Margin="20,0,0,0"/>
+                <Button Content="Cancel" Command="{Binding NavigateToDentists}" Height="20" Width="90" Margin="20,0,0,0"/>
             </StackPanel>
         </Grid>
 
