--- a/MDTManagment/MDTManagment/Views/Patients/AddPatientPage.xaml
+++ b/MDTManagment/MDTManagment/Views/Patients/AddPatientPage.xaml
@@ -84,7 +84,7 @@
         <Grid Grid.Column="2" Grid.Row="7">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <Button Content="Add Patient" Command="{Binding AddPatient}" Height="20" Width="90"/>
-                <Button Content="Abandon" Command="{Binding NavigateToPatientsPage}" Height="20" Width="90" Margin="20,0,0,0"/>
+                <Button Content="Cancel" Command="{Binding NavigateToPatientsPage}" Height="20" Width="90" Margin="20,0,0,0"/>
             </StackPanel>
         </Grid>
 
